@@ -1,4 +1,4 @@
-DIST lxdream-0.8.4.tar.gz 1501993 RMD160 b0fd3239b9eedf15ee415de3c2eda7dc199d4581 SHA1 13fe573052317f75053cfd4c52b46ad769ea318c SHA256 bc61a54898965249f4b74ff6b76941cfd81baefc93f1cca836e8699290fa9db3
-EBUILD lxdream-0.8.4.ebuild 1012 RMD160 cb05e154fa1397465c7fd02a8197350c8e01e941 SHA1 67bb8da844be9f391119729e795414414ec61f88 SHA256 909c96c2fd06b33711a8df35cd5daf30bf3236cbc2eb28751fbaa8fe0b8557c4
-MISC ChangeLog 457 RMD160 f315bbf33537b37b13a977a9106cbd710d6b82c3 SHA1 435aea47f84259322cf0d379c1bb203c8e4270fd SHA256 bb0742a5fb3bd86c85451aa8cfaf3bf1bc501a7a13933d591f91fae7051e692b
+DIST lxdream-0.9.tar.gz 2478304 RMD160 6514eba4e87bbfc906d681b0a85b2fef605c3d59 SHA1 6715048517fdb7b13c3a2ffa3e960c27ef9220f5 SHA256 4f28c05eaa0c142df7eb4478088a21d0da5e85918cfb1e353238ba8b4b6888f8
+EBUILD lxdream-0.9.ebuild 1035 RMD160 1c13fce2a7e4dfed44cfbe58b84bc620709c4270 SHA1 d400672e6069d7201df46d9feea11e87ec7d4ba2 SHA256 86bb40cfa17d3be50d70b3f48a7e30202816b4dcb517ed32436997408a04d475
+MISC ChangeLog 650 RMD160 8dcdac8b38a9070955602745937b46940ec182f1 SHA1 935debe0c4a42b0c638542f25b5d04b8aef097a1 SHA256 0fb1ba09c231a3fa461356329efe0075b8e894c3a311f388f8b9897f78927601
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
