@@ -1,6 +1,10 @@
 # ChangeLog for games-emulation/lxdream
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  04 Mar 2009; Chi-Thanh Christopher Nguyen (chithead)
+  <chithanh@cs.tu-berlin.de> -lxdream-0.8.4.ebuild, +lxdream-0.9.ebuild:
+  version bump, fix dependencies, put "|| die" where it belongs
 
   01 Aug 2008; Chi-Thanh Christopher Nguyen (chithead)
   <chithanh@cs.tu-berlin.de> -lxdream-0.8.3.ebuild, +lxdream-0.8.4.ebuild:
